--- a/angular.json
+++ b/angular.json
@@ -38,9 +38,10 @@
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
-              "src/styles.scss",
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.scss"
+             
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js"
