--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #To disable the Hibernate automatic creation and use script-based intialzation, set to none
 #spring.jpa.hibernate.ddl-auto=none 
